2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Merged from 3.1.0 branch. (rev 2248:HEAD)
	* mqrspec.[ch], tests/create_mqr_frame_pattern.c:
	  - MQRspec_getEccSpec() has been deleted.
	* tests/create_mqr_frame_pattern.c, tests/Makefile.am:
	  - Newly added.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c, qrinput.c, qrencode.c:
	  - Some compile warnings cleared.
	* qrencode.c, tests/test_qrencode.c:
	  - NULL check of an input arg has been added to
	    QRcode_encodeString8bit().
	  - NULL check test and empty string test have been added for
	    QRcode_encodeString8bit().
	* qrinput.h, qrencode_inner.h, split.c:
	  - Copyright year updates.
	* split.[ch]:
	  - Split_splitStringToQRinput() set errno EINVAL if input string is
	    NULL or empty.
	  - Documentation improved.
	* qrenc.c:
	  - perror() is now used to show the details of some errors.
	* qrencode.[ch]:
	  - Some functions now set errno appropriately.
	  - Typo fixes.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* tests/create_frame_pattern.c, tests/Makefile.am:
	  - New test tool "create_frame_pattern" has been added.
	* tests/test_qrspec.c:
	  - test_alignment1() has been replaced with test_newframe().
	    test_newframe() compares newly created frames with frame pattern
		data created by create_frame_pattern.
	* tests/frame, tests/Makefile.am:
	  - Pattern file "frame" has been added to EXTRA_DIST.
	* mask.c:
	  - Very small improvement. Unnecessary malloc()s are reduced.
	* tests/test_qrencode.c:
	  - Two new tests have been added.
	* split.c:
	  - NULL check and string length check have been added.
	* qrspec.c, tests/test_qrinput.c:
	  - Forgotten padding bits bug has been fixed. (enbugged at 2009.5.18)
	  - New test for the bug above has been added.
	* qrspec.[ch], qrencode_inner.h:
	  - Some function becomes __STATIC and their declarations have been
	    moved to qrencode_inner.h.
	* tests/prof_qrencode.c:
	  - Now liberates all heap at the end of the program.
